--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous" />
-        <title>ICVU y Áreas Verdes</title>
+        <title>ICVU 2020</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital@0;1&display=swap" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12">
-                        <h1 class="mb-3 mt-5 text-center">ICVU y Áreas Verdes</h1>
+                        <h1 class="mb-3 mt-5 text-center">Variaciones de ICVU en la Región Metropolitana</br>entre 2011 y 2020</h1>
                         <h2 class="fs-6 mb-5 text-center text-uppercase">NATALIA CORREAL</h2>
                     </div>
                 </div>
@@ -128,11 +128,10 @@
             <div class="row py-5">
                 <div class="col-10 col-md-8 mx-auto py-3">
                     <p class="lead">
-                        Reemplaza este párrafo con un texto introductorio, de una extensión máxima de cien palabras. El asunto de esta infografía es el ICVU: Índice de calidad de vida urbana de las comunas y ciudades de Chile.
+                        El índice de Calidad de Vida Urbana (ICVU) es un índice elaborado por la Cámara Chilena de Construcción junto con el Instituto de Estudios Urbanos y Territoriales de la Universidad Católica con el fin de comprender las brechas en la calidad de vida que existen entre comunas y ciudades en Chile.
                     </p>
                     <p>
-                        Reemplaza este párrafo con un texto que complemente al introductorio. Puedes extender este párrafo hasta las doscientas palabras. Considera que el ICVU es un índice sintético que mide y compara en términos relativos
-                        la calidad de vida a partir de un conjunto de variables referidas a seis dimensiones. Considera también que hay un gráfico no figurativo a continuación, que podrías aprovechar de presentar antes de cerrar el párrafo.
+                        Durante el transcurso de 9 años la calidad de vida de las distintas comunas de la Región Metropolitana fue variando, logrande mejorar, mantenerse o empeorar. En el siguiente gráfico es posible ver el total de cambios, donde se indica la relación entre el estado en que se situaban las comunas el 2011 en comparación a su estado actual.
                     </p>
                 </div>
                 <div class="col-11 col-md-10 mx-auto py-3">
@@ -147,12 +146,12 @@
                             -- https://www.datawrapper.de/
                         3 - reemplazarla imagen con el SVG que obtengan desde la App.
                     -->
-                    <img src="img/cambiar-a-svg.png" class="w-100" />
+                    <img src="img/viz-6.svg" class="w-100" transform="translate(2000, 0)"/>
                 </div>
 
                 <div class="col-10 col-md-8 mx-auto py-3">
                     <p>
-                        Reemplaza este párrafo con un texto que vincule el gráfico no figurativo de arriba con el gráfico mixto que sigue, que refiere a los resultados ICVU 2020 para las comunas de la Región Metropolitana de Santiago.
+                        A continuación es posible ver geográficamente donde se situan las distintas comunas de la Región Metropolitana, junto a su estado actual de ICVU.
                     </p>
 
                     <svg enable-background="new -1000 -1000 800 800" version="1.0" class="py-3"
@@ -329,8 +328,9 @@
                     })
                 </script>
                     <p>
-                        Puedes mejorar el gráfico, cambiado la imagen satelital por una ilustración que coincida de mejor manera con las comunas dibujadas en el SVG y el estilo de imagen de la cabecera, de manera de ofrecer un mejor cierre (que lo último se vea como lo primero).
+                       El mapa anterior es una ilustración de Daniela William para Mappin 2018.
                     </p>
+                    <p style="color: white;">hola</p>
         
                 </div>
             </div>
